Add location and sublocation in labels